fix z-index for closing x

--- a/scss/partials/_fullscreen_topic.scss
+++ b/scss/partials/_fullscreen_topic.scss
@@ -30,6 +30,7 @@ div.fullscreen-topic {
       position: fixed;
       cursor: pointer;
       top: #{$navbar_height}px;
+      z-index: 1040;
       @include mobile(){
         top: 10px;
         left: -20px;
